Fix: Health Check Refactor
